# ExoCode

./: .travis.yml  CMakeLists.txt  README.md  Utils.cpp  Utils.hpp
test/mocks/port/: CMakeLists.txt  mockInputPort.hpp  mockOutputPort.hpp  mockSpecialPort.hpp
test/tests/: CMakeLists.txt
test/tests/board/: CMakeLists.txt  testBoard.cpp
test/tests/motor/: CMakeLists.txt
test/tests/transmission/: CMakeLists.txt
test/tests/utils/: CMakeLists.txt  testAverage.cpp
